@@ -1,7 +1,7 @@
 /// @file htslib/sam.h
 /// High-level SAM/BAM/CRAM sequence file operations.
 /*
-    Copyright (C) 2008, 2009, 2013-2014 Genome Research Ltd.
+    Copyright (C) 2008, 2009, 2013-2016 Genome Research Ltd.
     Copyright (C) 2010, 2012, 2013 Broad Institute.
 
     Author: Heng Li <lh3@sanger.ac.uk>
@@ -149,8 +149,12 @@ typedef struct {
 typedef struct {
     int32_t tid;
     int32_t pos;
-    uint32_t bin:16, qual:8, l_qname:8;
-    uint32_t flag:16, n_cigar:16;
+    uint16_t bin;
+    uint8_t qual;
+    uint8_t l_qname;
+    uint16_t flag;
+    uint16_t unused1;
+    uint32_t n_cigar;
     int32_t l_qseq;
     int32_t mtid;
     int32_t mpos;
